Update creative russia landing contacts

--- a/landings/creative-russia/index.html
+++ b/landings/creative-russia/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Креативная Россия — лендинг</title>
+  <title>Креативная Россия — книга-интервью о героях креативных индустрий России</title>
   <meta name="description" content="Книга «Креативная Россия: как превратить любовь к культуре и месту в успешный проект» — интервью с героями креативных индустрий с психологическим комментарием." />
 
   <style>
@@ -139,6 +139,13 @@
     .btn.primary:hover{
       filter: saturate(1.02);
       box-shadow: 0 18px 36px rgba(228,87,110,.26);
+    }
+    .header-actions{
+      display:flex;
+      align-items:center;
+      gap: 10px;
+      flex-wrap:wrap;
+      justify-content:flex-end;
     }
 
     /* Sections */
@@ -484,7 +491,10 @@
           </ul>
         </nav>
 
-        <a class="btn primary" href="https://t.me/kudinman" target="_blank" rel="noopener">Написать в Telegram</a>
+        <div class="header-actions">
+          <a class="btn primary" href="https://t.me/kudinman" target="_blank" rel="noopener">ТГ: @kudinman</a>
+          <a class="btn" href="https://vk.ru/dmkdnv" target="_blank" rel="noopener">ВК: @dmkdnv</a>
+        </div>
       </div>
     </div>
   </header>
@@ -510,7 +520,8 @@
             </p>
 
             <div class="hero2-cta">
-              <a class="btn primary" href="https://t.me/kudinman" target="_blank" rel="noopener">Стать героем — написать в Telegram</a>
+              <a class="btn primary" href="https://t.me/kudinman" target="_blank" rel="noopener">ТГ: @kudinman</a>
+              <a class="btn" href="https://vk.ru/dmkdnv" target="_blank" rel="noopener">ВК: @dmkdnv</a>
               <span class="microcopy">Официально · договор · возможна рассрочка 2–3 платежа</span>
             </div>
 
@@ -635,8 +646,9 @@
           </p>
         </div>
 
-        <div style="margin-top: 16px;">
-          <a class="btn primary" href="https://t.me/kudinman" target="_blank" rel="noopener">Написать в Telegram</a>
+        <div style="margin-top: 16px; display:flex; flex-wrap:wrap; gap:10px;">
+          <a class="btn primary" href="https://t.me/kudinman" target="_blank" rel="noopener">ТГ: @kudinman</a>
+          <a class="btn" href="https://vk.ru/dmkdnv" target="_blank" rel="noopener">ВК: @dmkdnv</a>
         </div>
       </div>
     </section>
@@ -706,8 +718,9 @@
               <li>Дистрибуция через партнерскую сеть</li>
             </ul>
 
-            <div style="margin-top: 16px;">
-              <a class="btn primary" href="https://t.me/kudinman" target="_blank" rel="noopener">Стать героем — написать в Telegram</a>
+            <div style="margin-top: 16px; display:flex; flex-wrap:wrap; gap:10px;">
+              <a class="btn primary" href="https://t.me/kudinman" target="_blank" rel="noopener">ТГ: @kudinman</a>
+              <a class="btn" href="https://vk.ru/dmkdnv" target="_blank" rel="noopener">ВК: @dmkdnv</a>
             </div>
 
             <p class="muted" style="margin-top: 12px; font-size:.95rem;">
@@ -718,8 +731,7 @@
           <div class="card card-pad">
             <h3>Дополнительные условия</h3>
             <ul class="clean">
-              <li><strong>Не входит:</strong> доставка печатных книг в ваш город (логистика оплачивается отдельно).</li>
-              <li><strong>Самовывоз:</strong> Москва, Санкт-Петербург, Нижний Новгород, Иваново — по договоренности.</li>
+              <li><strong>Получение экземпляров книги:</strong> самовывоз в Москве, Санкт-Петербурге, Нижнем Новгороде, Иваново; в других городах — по договоренности. Возможна отправка транспортными компаниями за счёт получателя. Доставка печатных книг в ваш город не входит.</li>
               <li><strong>Доп. экземпляры:</strong> можно заказать перед сдачей в издательство (ориентир ~500 ₽/шт.).</li>
               <li><strong>Электронная версия:</strong> PDF и fb2. Для героев — промокод на скидку, возможен бесплатный код.</li>
             </ul>
@@ -740,7 +752,7 @@
             <div class="kicker">FAQ</div>
             <h2>Частые вопросы</h2>
           </div>
-          <p>Коротко и по делу. Самый быстрый путь — написать в Telegram.</p>
+          <p>Коротко и по делу. Самый быстрый путь — написать в Telegram или ВК.</p>
         </div>
 
         <!-- Smooth accordion -->
@@ -865,7 +877,10 @@
         </div>
 
         <div style="margin-top: 16px;">
-          <a class="btn primary" href="https://t.me/kudinman" target="_blank" rel="noopener">Задать вопрос в Telegram</a>
+          <div style="display:flex; flex-wrap:wrap; gap:10px;">
+            <a class="btn primary" href="https://t.me/kudinman" target="_blank" rel="noopener">ТГ: @kudinman</a>
+            <a class="btn" href="https://vk.ru/dmkdnv" target="_blank" rel="noopener">ВК: @dmkdnv</a>
+          </div>
         </div>
       </div>
     </section>
@@ -891,7 +906,10 @@
             <a href="#pricing">Условия</a> · <a href="#faq">FAQ</a>
           </p>
           <p class="muted" style="margin:10px 0 0;">
-            Контакт: <a href="https://t.me/kudinman" target="_blank" rel="noopener">@kudinman</a>
+            Контакты:
+            <a href="https://t.me/kudinman" target="_blank" rel="noopener">@kudinman</a>
+            ·
+            <a href="https://vk.ru/dmkdnv" target="_blank" rel="noopener">@dmkdnv</a>
           </p>
         </div>
       </div>
