update creative russia landing

--- a/landings/creative-russia/index.html
+++ b/landings/creative-russia/index.html
@@ -45,7 +45,7 @@
       text-rendering: optimizeLegibility;
     }
 
-    a{ color: inherit; text-decoration: none; }
+    a{ color: inherit; text-decoration: none; font-weight: 600; }
     a:hover{ text-decoration: underline; text-decoration-thickness: 1px; text-underline-offset: 3px; }
 
     .container{
@@ -786,16 +786,15 @@
             <div class="kicker">Автор</div>
             <h2>О писателе</h2>
           </div>
-          <p>Коротко о человеке, который бережно раскрывает истории героев.</p>
         </div>
 
         <div class="author-grid">
           <div class="author-photo">
-            <img src="/images/author-placeholder.jpg" alt="Фото Юлии Уваровой" />
+            <img src="./author.jpg" alt="Фото Юлии Уваровой" />
           </div>
           <div>
             <h3>Юлия Уварова — психолог, писатель, маркетолог, предприниматель.</h3>
-            <p>Автор четырех книг, одна из которых — «Debug выгорания: истории IT-Фениксов».</p>
+            <p>Автор четырех книг, одна из которых — <a href="https://phoenix-book.julove-coach.ru" target="_blank" rel="noopener">«Debug выгорания: истории IT-Фениксов»</a>.</p>
 
             <details class="author-details">
               <summary>Показать подробнее</summary>
@@ -822,7 +821,6 @@
             <div class="kicker">FAQ</div>
             <h2>Частые вопросы</h2>
           </div>
-          <p>Коротко и по делу. Самый быстрый путь — написать в Telegram или ВК.</p>
         </div>
 
         <!-- Smooth accordion -->
@@ -970,11 +968,8 @@
           <p class="muted" style="margin:0;">© <span id="year"></span></p>
           <p class="muted" style="margin-top:10px;">
             Проект реализуется в рамках объединения «Урбанистический форум» —
-            <a href="https://UrbanConf.ru" target="_blank" rel="noopener">UrbanConf</a>,
             <a href="https://UrbanConf.ru" target="_blank" rel="noopener">UrbanConf.ru</a>,
-            <a href="https://vk.ru/urbanconf" target="_blank" rel="noopener">VK</a>,
-            а также союза «Люди. Реки. Лес» —
-            <a href="https://vk.ru/ludirekiles" target="_blank" rel="noopener">VK</a>.
+            а также союза <a href="https://vk.ru/ludirekiles" target="_blank" rel="noopener">«Люди. Реки. Лес»</a>.
           </p>
         </div>
 
